--- a/servicios.html
+++ b/servicios.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Servicios</title>
+    <title>.:: Maquinaria J.McPRIS ::. | Servicios</title>
     <meta charset="utf-8">
     <meta name="description" content="Grúas J. McPris se encuentra en Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, Estado de México. Servicio y calidad en Venta de Grúas Industriales" /><meta name="keywords" content="Grúas J. McPris, Venta de Grúas Industriales, Col. Recursos Hidraulicos, Tultitlán, Estado de México" />
     <meta property="og:type" content="business.business" />
-    <!-- <meta property="og:url" content="http://paginas.seccionamarilla.com.mx/gruas-j-mcpris/venta-de-gruas-industriales/estado-de-mexico/tultitlan/-/recursos-hidraulicos/" /> -->
+    <meta property="og:url" content="http://www.maquinariajmcpris.com/" />
     <meta property="og:title" content="Grúas J. McPris" />
     <meta property="business:contact_data:street_address" content="Vía López Portillo 76" />
     <meta property="business:contact_data:locality" content="Tultitlán" />
@@ -13,7 +13,7 @@
     <meta property="business:contact_data:postal_code" content="54913" />
     <meta property="business:contact_data:country_name" content="MX" />
     <meta property="business:contact_data:phone_number" content="(55) 5893-2231" />
-    <!-- <meta property="business:contact_data:website" content="http://paginas.seccionamarilla.com.mx/gruas-j-mcpris/venta-de-gruas-industriales/estado-de-mexico/tultitlan/-/recursos-hidraulicos/" /> -->
+    <meta property="business:contact_data:website" content="http://www.maquinariajmcpris.com/" />
     <meta property="place:location:latitude" content="19.61927100000000" />
     <meta property="place:location:longitude" content="-99.17303300000000" />
     <meta property="business:hours:day" content="Lunes" />
@@ -34,7 +34,7 @@
     <meta property="business:hours:day" content="Sábado" />
     <meta property="business:hours:start" content="9:00" />
     <meta property="business:hours:end" content="15:00" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
