Commit antes de la visita del jueves

--- a/acercade.html
+++ b/acercade.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>.:: Maquinaria J.McPRIS ::. | Acerca de</title>
+    <title>.:: Maquinaria J.McPRIS | Acerca de ::.</title>
     <meta charset="utf-8">
     <meta name="description" content="Grúas J. McPris se encuentra en Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, Estado de México. Servicio y calidad en Venta de Grúas Industriales" /><meta name="keywords" content="Grúas J. McPris, Venta de Grúas Industriales, Col. Recursos Hidraulicos, Tultitlán, Estado de México" />
     <meta property="og:type" content="business.business" />
