--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from livedemo00.template-help.com/wt_55103/contacto.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Nov 2016 03:01:42 GMT -->
 <head>
-    <title>.:: Maquinaria J.McPRIS ::. | Location</title>
+    <title>.:: Maquinaria J.McPRIS | Location ::.</title>
     <meta charset="utf-8">
     <meta name="description" content="Grúas J. McPris se encuentra en Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, Estado de México. Servicio y calidad en Venta de Grúas Industriales" /><meta name="keywords" content="Grúas J. McPris, Venta de Grúas Industriales, Col. Recursos Hidraulicos, Tultitlán, Estado de México" />
     <meta property="og:type" content="business.business" />
