--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>.:: Maquinaria J.McPRIS ::. | Inicio</title>
+    <title>.:: Maquinaria J.McPRIS | Inicio ::.</title>
     <meta charset="utf-8">
       <meta name="description" content="Grúas J. McPris se encuentra en Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, Estado de México. Servicio y calidad en Venta de Grúas Industriales" /><meta name="keywords" content="Grúas J. McPris, Venta de Grúas Industriales, Col. Recursos Hidraulicos, Tultitlán, Estado de México" />
       <meta property="og:type" content="business.business" />
@@ -34,7 +34,6 @@
       <meta property="business:hours:day" content="Sábado" />
       <meta property="business:hours:start" content="9:00" />
       <meta property="business:hours:end" content="15:00" />
-
     <link rel="icon" href="images/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
@@ -173,7 +172,7 @@
               <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden;">
                   <div data-p="225.00">
                       <img data-u="image" src="images/page-1_slide01.jpg" />
-                      <div style="position: absolute; top: 30px; left: 30px; width: 480px; height: 120px; font-size: 50px; color: #333; line-height: 60px;">La mejor opción en grúas industriales,<br>¡Llámanos!</div>
+                      <div style="position: absolute; top: 16%; left: 405px; width: 480px; height: 120px; font-size: 50px; color: #333; line-height: 60px;text-align: center;">La mejor opción en grúas industriales,<br>¡Llámanos!</div>
                   </div>
                   <div data-p="225.00" style="display: none;">
                       <img data-u="image" src="images/page-1_slide02.jpg" />
@@ -198,18 +197,18 @@
               <ul class="banner">
                 <li class="presentacion">
                   <h3 >Bienvenido</h3>
-                  <h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Leer más</a><br><br>
+                  <h6>¿Quiénes Somos?</h6>
+                  <p>Maquinaria J.McPRIS Es una empresa dedicada a apoyar al sector productivo y de servicios en México. Ofrecemos grúas y camiones usados en excelentes condiciones con sistema hidráulico...</p><a href="acercade.html" class="btn">Leer más</a><br><br>
                 </li>
                 <li class="presentacion">
                   <h3 >Productos</h3>
-                  <h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Leer más</a><br><br>
+                  <h6>¿Qué ofrecemos?</h6>
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="productos.html" class="btn">Leer más</a><br><br>
                 </li>
                 <li class="presentacion">
-                  <h3 >Ubicación</h3>
-                  <h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Leer más</a><br><br>
+                  <h3 >Servicios</h3>
+                  <h6>Lorem ipsum dolor</h6>
+                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="servicios.html" class="btn">Leer más</a><br><br>
                 </li>
               </ul>
             </div>
