Detalles, despues de Godaddy =D

--- a/acercade.html
+++ b/acercade.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>.:: Maquinaria J.McPRIS | Acerca de ::.</title>
@@ -69,8 +69,6 @@
                 </li>
                 <li><a href="servicios.html">Servicios</a>
                 </li>
-                <li><a href="productos.html">Productos</a>
-                </li>
                 <li><a href="contacto.html">Contacto</a>
                 </li>
               </ul>
@@ -115,7 +113,7 @@
 
           </div>
         </section>
-        <section class="well center bg-color">
+        <!-- <section class="well center bg-color">
           <div class="container">
             <h2>Nuestra Historia</h2>
             <div class="row">
@@ -137,7 +135,7 @@
               </article>
             </div>
           </div>
-        </section>
+        </section> -->
       </main>
       <footer>
         <section class="well1 ins1 mobile-center">
@@ -150,7 +148,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="acercade.html">Acerca de</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="productos.html">Productos</a></li>
+                    <!-- <li><a href="productos.html">Productos</a></li> -->
                     <li><a href="contacto.html">Ubicación</a></li>
                   </ul>
               </div>
@@ -170,7 +168,7 @@
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
-                  <dd><a href="mailto:ventas.gruasindustriales@gmail.com">&nbsp;ventas.gruasindustriales@gmail.com</a></dd>
+                  <dd><a href="mailto:manuel@maquinariajmcpris.com">&nbsp;manuel@maquinariajmcpris.com</a></dd>
                 </dl>
               </div>
               <div class="grid_3">
