--- a/contacto.html
+++ b/contacto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <!-- Mirrored from livedemo00.template-help.com/wt_55103/contacto.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Nov 2016 03:01:42 GMT -->
@@ -84,8 +84,6 @@
                 </li>
                 <li><a href="servicios.html">Servicios</a>
                 </li>
-                <li><a href="productos.html">Productos</a>
-                </li>
                 <li class="active"><a href="contacto.html">Contacto</a>
                 </li>
               </ul>
@@ -143,7 +141,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="acercade.html">Acerca de</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="productos.html">Productos</a></li>
+                    <!-- <li><a href="productos.html">Productos</a></li> -->
                     <li><a href="contacto.html">Ubicación</a></li>
                   </ul>
               </div>
@@ -163,7 +161,7 @@
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
-                  <dd><a href="mailto:ventas.gruasindustriales@gmail.com">&nbsp;ventas.gruasindustriales@gmail.com</a></dd>
+                  <dd><a href="mailto:manuel@maquinariajmcpris.com">&nbsp;manuel@maquinariajmcpris.com</a></dd>
                 </dl>
               </div>
               <div class="grid_3">
