--- a/productos.html
+++ b/productos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>.:: Maquinaria J.McPRIS | Productos ::.</title>
@@ -112,27 +112,19 @@
             <p class="txt1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna<br/> aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Leer mas</a>
           </div>
         </section>
-        <section class="well center bg-color">
+        <section class="well center">
           <div class="container">
-            <h2>Más Productos</h2>
-            <ul class="row index-list">
-              <li class="grid_3">
-                <h5><a href="#">Penatibus et magnis</a></h5>
-                <p>Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque. Fusce suscipit penatibus et magnis dis parturient.</p>
-              </li>
-              <li class="grid_3">
-                <h5><a href="#">Nascetur ridiculus</a></h5>
-                <p>Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis partur ient montes, nascetur ridiculus.</p>
-              </li>
-              <li class="grid_3">
-                <h5><a href="#">Aenean auctor wisi</a></h5>
-                <p>Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet.</p>
-              </li>
-              <li class="grid_3">
-                <h5><a href="#">Integer rutrum ante</a></h5>
-                <p>Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accmsan malesuada orci. Donec sit ame.</p>
-              </li>
-            </ul>
+            <h2>Galería</h2>
+            <div class="row off1">
+              <div class="grid_4"><a class="img"><img src="images/1.jpg" alt=""><span>Renta de grúas para maniobras</span></div>
+              <div class="grid_4"><a class="img"><img src="images/2.jpg" alt=""><span>Venta de Grúas Industriales</span></div>
+              <div class="grid_4"><a class="img"><img src="images/3.jpg" alt=""><span>Renta de grúas</span></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4"><a class="img"><img src="images/4.jpg" alt=""><span>Grúas industriales</span></a></div>
+              <div class="grid_4"><a class="img"><img src="images/5.jpg" alt=""><span>Grúas de plataforma</span></a></div>
+              <div class="grid_4"><a class="img"><img src="images/6.jpg" alt=""><span>Infraestructura privada</span></a></div>
+            </div>
           </div>
         </section>
       </main>
@@ -152,7 +144,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="acercade.html">Acerca de</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="productos.html">Productos</a></li>
+                    <!-- <li><a href="productos.html">Productos</a></li> -->
                     <li><a href="contacto.html">Ubicación</a></li>
                   </ul>
               </div>
@@ -172,7 +164,7 @@
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
-                  <dd><a href="mailto:ventas.gruasindustriales@gmail.com">&nbsp;ventas.gruasindustriales@gmail.com</a></dd>
+                  <dd><a href="mailto:manuel@maquinariajmcpris.com">&nbsp;manuel@maquinariajmcpris.com</a></dd>
                 </dl>
               </div>
               <div class="grid_3">
