--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>.:: Maquinaria J.McPRIS | Inicio ::.</title>
@@ -153,8 +153,6 @@
                 </li>
                 <li><a href="servicios.html">Servicios</a>
                 </li>
-                <li><a href="productos.html">Productos</a>
-                </li>
                 <li><a href="contacto.html">Contacto</a>
                 </li>
               </ul>
@@ -253,32 +251,7 @@
         </section>
         <section data-mobile="true" class="well2 mobile-center parallax" style="background-image: url(images/parallax1.jpg);">
           <div class="container">
-            <h2 class="center">Nuestro Equipo</h2>
-            <div class="row">
-              <blockquote class="grid_4"><center><img src="images/page-1_img10.jpg" alt=""></center>
-                <p align="justify">
-                  <q>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo. Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore sit amet conse minim veniam et dolore magna.</q>
-                </p>
-                <cite><strong>Tom copper </strong> - Penatibus Co.</cite>
-              </blockquote>
-              <blockquote class="grid_4"><center><img src="images/page-1_img10.jpg" alt=""></center>
-                <p align="justify">
-                  <q>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo. Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore sit amet conse minim veniam et dolore magna.</q>
-                </p>
-                <cite><strong>Nick Penta </strong>  - Zoltan Co.</cite>
-              </blockquote>
-              <blockquote class="grid_4"><center><img src="images/page-1_img11.jpg" alt=""></center>
-                <p align="justify">
-                  <q>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo. Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore sit amet conse minim veniam et dolore magna.</q>
-                </p>
-                <cite><strong>Ric Simon </strong> - Berrows Co.</cite>
-              </blockquote>
-            </div>
-          </div>
-        </section>
-        <section class="well1 center ">
-          <div class="container">
-            <h2>Nuestros Clientes</h2>
+            <h2 style="text-align:center;">Nuestros Clientes</h2>
             <ul class="row off1 list">
               <li class="grid_3"><a href="#"><img src="images/page-1_img12.jpg" alt=""></a></li>
               <li class="grid_3"><a href="#"><img src="images/page-1_img12.jpg" alt=""></a></li>
@@ -303,7 +276,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="acercade.html">Acerca de</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="productos.html">Productos</a></li>
+                    <!-- <!-- <li><a href="productos.html">Productos</a></li> -->
                     <li><a href="contacto.html">Ubicación</a></li>
                   </ul>
               </div>
@@ -323,7 +296,7 @@
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
-                  <dd><a href="mailto:ventas.gruasindustriales@gmail.com">&nbsp;ventas.gruasindustriales@gmail.com</a></dd>
+                  <dd><a href="mailto:manuel@maquinariajmcpris.com">&nbsp;manuel@maquinariajmcpris.com</a></dd>
                 </dl>
               </div>
               <div class="grid_3">
