--- a/servicios.html
+++ b/servicios.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>.:: Maquinaria J.McPRIS | Servicios ::.</title>
@@ -69,8 +69,6 @@
                 </li>
                 <li class="active"><a href="servicios.html">Servicios</a>
                 </li>
-                <li><a href="productos.html">Productos</a>
-                </li>
                 <li><a href="contacto.html">Contacto</a>
                 </li>
               </ul>
@@ -85,20 +83,20 @@
             <div class="row">
               <figure class="grid_6 figure2"><img src="images/page-3_img01.jpg" alt="">
                 <figcaption>
-                  <h5 data-equal-group="1">RENTA DE GRÚA</h5><br>
-                  <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p>
+                  <h5 data-equal-group="1">RENTA DE GRÚAS INDUSTRIALES, MANIOBRAS Y SERVICIO DE TRASLADOS</h5><br><br>
+                  <!-- <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p> -->
                 </figcaption>
               </figure>
               <figure class="grid_6 figure2"><img src="images/page-3_img02.jpg" alt="">
                 <figcaption>
-                  <h5 data-equal-group="1">VENTA DE GRÚA</h5><br>
-                  <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p>
+                  <h5 data-equal-group="1">VENTA DE GRÚAS INDUSTRIALES, MAQUINARIA Y TRACTOCAMIONES</h5><br><br>
+                  <!-- <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p> -->
                 </figcaption>
               </figure>
             </div>
           </div>
         </section>
-        <section data-mobile="true" class="well parallax" style='background-image: url("images/parallax3.jpg");'>
+        <!-- <section data-mobile="true" class="well parallax" style='background-image: url("images/parallax3.jpg");'>
           <div class="container">
             <h2 class="center">Featured Servicios</h2>
             <div class="row off2">
@@ -116,12 +114,20 @@
               </div>
             </div>
           </div>
-        </section>
-        <section class="well center bg-color">
+        </section> -->
+          <section class="well center">
           <div class="container">
-            <h2>Más Servicios</h2>
-            <h5 class="off2">Donec sit amet eros. Lorem ipsum dolor amet, consectetuer adipiscing elit.</h5>
-            <p class="txt1">Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem.</p>
+            <h2>Galería</h2>
+            <div class="row off1">
+              <div class="grid_4"><a class="img"><img src="images/1.jpg" alt=""><span>Renta de grúas para maniobras</span></div>
+              <div class="grid_4"><a class="img"><img src="images/2.jpg" alt=""><span>Venta de Grúas Industriales</span></div>
+              <div class="grid_4"><a class="img"><img src="images/3.jpg" alt=""><span>Renta de grúas</span></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4"><a class="img"><img src="images/4.jpg" alt=""><span>Grúas industriales</span></a></div>
+              <div class="grid_4"><a class="img"><img src="images/5.jpg" alt=""><span>Grúas de plataforma</span></a></div>
+              <div class="grid_4"><a class="img"><img src="images/6.jpg" alt=""><span>Infraestructura privada</span></a></div>
+            </div>
           </div>
         </section>
       </main>
@@ -136,7 +142,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="acercade.html">Acerca de</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="productos.html">Productos</a></li>
+                    <!-- <li><a href="productos.html">Productos</a></li> -->
                     <li><a href="contacto.html">Ubicación</a></li>
                   </ul>
               </div>
@@ -156,7 +162,7 @@
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
-                  <dd><a href="mailto:ventas.gruasindustriales@gmail.com">&nbsp;ventas.gruasindustriales@gmail.com</a></dd>
+                  <dd><a href="mailto:manuel@maquinariajmcpris.com">&nbsp;manuel@maquinariajmcpris.com</a></dd>
                 </dl>
               </div>
               <div class="grid_3">
