Antes de eliminar tarjetas de inicio, imagenes seleccionardas y banner reparado

--- a/servicios.html
+++ b/servicios.html
@@ -119,14 +119,53 @@
           <div class="container">
             <h2>Galería</h2>
             <div class="row off1">
-              <div class="grid_4"><a class="img"><img src="images/1.jpg" alt=""><span>Renta de grúas para maniobras</span></div>
-              <div class="grid_4"><a class="img"><img src="images/2.jpg" alt=""><span>Venta de Grúas Industriales</span></div>
-              <div class="grid_4"><a class="img"><img src="images/3.jpg" alt=""><span>Renta de grúas</span></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/1.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/2.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/3.jpg" alt=""></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4"><a class="img"><img src="images/4.jpg" alt=""><span>Grúas industriales</span></a></div>
-              <div class="grid_4"><a class="img"><img src="images/5.jpg" alt=""><span>Grúas de plataforma</span></a></div>
-              <div class="grid_4"><a class="img"><img src="images/6.jpg" alt=""><span>Infraestructura privada</span></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/5.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/6.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/4.jpg" alt=""></a></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/7.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/8.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/9.jpg" alt=""></a></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/10.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/11.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/12.jpg" alt=""></a></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/13.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/14.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/15.jpg" alt=""></a></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/16.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/17.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/18.jpg" alt=""></a></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/19.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/20.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/21.jpg" alt=""></a></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/19.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/20.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/22.jpg" alt=""></a></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/23.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/24.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/25.jpg" alt=""></a></div>
+            </div>
+            <div class="row off1">
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/26.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/27.jpg" alt=""></a></div>
             </div>
           </div>
         </section>
